--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="import" href="https://fonts.googleapis.com/css?family=Poppins">
   </head>
   <body>
-    <div id="app"></div>
+    <canvas class="webgl">
+
+    </canvas>
+    <nav>
+      <a href="/">sphere</a>
+      <ul>
+        <li>
+          Buidle Guidl
+        </li>
+        <li>
+          GitHub
+        </li>
+      </ul>
+    </nav>
+    <h1 class="title"> Give it a spin</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
